[package]
name = "tacvm"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
nom = "5"
nom_locate = "1.0.0"
unescape = "0.1.0"
indexmap = "1.0.2"
clap = "2"

[lib]
path = "src/lib.rs"

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false